<resources>
    <string name="app_name">My First Application</string>
    <string name="NUSTT_text">NUSTT</string>
    <string name="welcome_button">Welcome</string>
    <string name="quote_text">New Sem, New You.</string>
    <string name="my_modules_border">My Modules</string>
    <string name="edit_button">Edit</string>
    <string name="close_edit_button">Close Edit</string>
    <string name="view_Timetable_button">VIEW TIMETABLE</string>
    <string name="generate_Timetable_button">GENERATE TIMETABLE</string>
    <string name="add_modules_button">Module</string>
    <string name="my_timetable_border">MY TIMETABLE</string>
    <string name="oops_text">Oops!</string>
    <string name="no_timetable_warning">You have not generated your timetable.</string>
    <string name="criteria_text">Criteria</string>
    <string name="specific_lesson_text">Specific Lesson</string>
    <string name="lesson_type_text">Type</string>
    <string name="lesson_number_text">Lesson Code</string>
    <string name="refine_criteria_button">REFINE CRITERIA</string>
    <string name="no_ideal_warning">No ideal timetable found!</string>
    <string name="generated_msg">Timetable Generated!</string>
    <string name="invalid_mods">Modules are invalid!</string>
    <string name="refine_modules_button">REFINE MODULES</string>
    <string name="invalid_lesson_text">Lesson cannot be found!</string>
    <string name="exam_dates_clash">Examination Dates clash!</string>
    <string name="refine_condition_button">REFINE CONDITION</string>
    <string name="close_info_button">CLOSE</string>
    <string name="criteria_textview">Least number of working days</string>
    <string name="none_text">None</string>
    <string name="info_text">Information</string>
    <string name="edit_mods">Edit Modules</string>
    <string name="edit_condition">Edit Condition</string>
    <string name="create_tt">View Timetable</string>
    <string name="current_tt">Current Timetable</string>
    <string name="save_my_tt">Save Timetable</string>
    <string name="bookmark_tt">Bookmark</string>
    <string name="help_textview">
        After selecting your modules and condition,
        Click View TT button to view the new timetable generated.
        Click the checkbox and bookmark icon
        To save your timetable.
        Click Information button to find out more about the timetable.
        Click Edit Modules button to edit the list of modules.
        Click Edit Condition button to edit your condition chosen.
        Click back to go back to the previous activity.
    </string>
    <string name="checkbox">com.example.myfirstapplication.checkbox</string>
    <string name="timetable">com.example.myfirstapplication.timetable</string>
    <string-array name="criteria">
        <item>Least Number of Working Days</item>
    </string-array>

    <string-array name="typeOfLesson">
        <item>Lecture</item>
        <item>Tutorial</item>
        <item>Recitation</item>
        <item>Laboratory</item>
        <item>Sectional Teaching</item>
    </string-array>
</resources>
